Fix line-breaks in mail body

--- a/modules/webapp/src/main/webjar/docspell.css
+++ b/modules/webapp/src/main/webjar/docspell.css
@@ -134,7 +134,7 @@ span.small-info {
 }
 
 .mail-body {
-    white-space: pre;
+    white-space: pre-wrap;
 }
 
 .ui.form textarea.search {
